--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Oswald:wght@200..700&family=Protest+Strike&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -7,6 +9,24 @@ body{
     font-size: 20px;
 }
 
-@import "./home"
+//fonts
+$oswald : "Oswald", sans-serif;
+$brush : "Alex Brush", cursive;
+$protest: "Protest Strike", sans-serif;
+
+
+//colors
+$white: #fff;
+$gray: #aaaaaa;
+$black: #000;
+$strong_purple: #a87fa9;
+$purple: #bc9fbc;
+$light_purple: #CBC3E3;
+$light_violet: #CF9FFF;
+
+
+
+@import "./home";
+@import "./card_section";
 
 
