--- a/src/style/sass/_proposal_section.scss
+++ b/src/style/sass/_proposal_section.scss
@@ -1,8 +1,7 @@
 #proposal_section{
     position: relative;
     height: 100vh;
-    background-position: center;
-    background-size: cover;
+    background-color: $black;
     display: flex;
     justify-content: center;
     align-items: center;
