--- a/src/style/sass/_road.scss
+++ b/src/style/sass/_road.scss
@@ -10,6 +10,7 @@ $translateY: 5rem;
     background-size: cover;
     overflow-y: scroll;
     overflow-x: hidden;   
+    
 }
 
 .introduction_section{
@@ -20,6 +21,24 @@ $translateY: 5rem;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    color: $white;
+
+    .introduction_message_container{
+        position: absolute;
+        top: 10%;
+        transition: 2s linear;
+        h4{
+            font-size: 2rem;
+            user-select: none;
+        }
+
+        &.disapear{
+            opacity: 0;
+            h4{
+                filter: blur(10px);
+            }
+        }
+    }
 
     .hearts{
         position: absolute;
@@ -61,8 +80,8 @@ $translateY: 5rem;
             width: 50%;
             animation-name: scrolling__effect;
             animation-timeline: view();
-            animation-range-start: 10%;
-            animation-range-end: 60%;
+            animation-range-start: 0%;
+            animation-range-end: 30%;
             animation-fill-mode: forwards;
             opacity: 0;
             transform: translateX(-$translateX);
@@ -123,6 +142,44 @@ $translateY: 5rem;
         opacity: 1;
     }
 }
+
+.final_section{
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    background-color: black;
+    color: $white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 2rem 0;
+
+    .final_text{
+        margin: 4rem 1.5rem;
+        h4{
+            font-size: 1.7rem;
+            font-family: $oswald;
+        }
+        animation-name: text_disapear;
+        animation-timeline: view();
+        animation-fill-mode: forwards;
+        animation-range-start: 40%;
+        animation-range-end: 60%;
+        animation-delay: 3s;
+    }
+    .final_image{
+        width: 100%;
+        height: 12rem;
+        background-position: center;
+        background-size: cover;
+        border: 3px solid $white;
+        margin: 0.5rem 0;
+        border-radius: 5%;
+    }
+}
+
 
 @keyframes scrolling__effect{
     to{
