--- a/src/style/sass/_card_section.scss
+++ b/src/style/sass/_card_section.scss
@@ -6,7 +6,8 @@ $card_width: 15rem;
     position: relative;
     width: 100%;
     height: 100vh;
-    background-color: $background_color;
+    background: $strong-purple;
+background: linear-gradient(0deg, $strong-purple 0%, $purple 50%, $strong-purple 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
