--- a/src/style/sass/_road.scss
+++ b/src/style/sass/_road.scss
@@ -3,11 +3,8 @@ $rotation_before: 45deg;
 $translateX: 10rem;
 $translateY: 5rem;
 #road_page{
-    position: relative;
     height: 100vh;
-    width: 100vw;
-    background-position: center;
-    background-size: cover;
+    width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;   
     
@@ -147,7 +144,6 @@ $translateY: 5rem;
     position: relative;
     min-height: 100vh;
     width: 100%;
-    background-color: black;
     color: $white;
     display: flex;
     flex-direction: column;
@@ -177,6 +173,10 @@ $translateY: 5rem;
         border: 3px solid $white;
         margin: 0.5rem 0;
         border-radius: 5%;
+        animation-name: img_effect;
+        animation-duration: 8s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
     }
 }
 
@@ -185,5 +185,24 @@ $translateY: 5rem;
     to{
         opacity: 1;
         transform: rotate(0) translate(0);
+    }
+}
+
+@keyframes img_effect {
+    0%{
+        opacity: 1;
+    }
+
+    50%{
+        opacity: 1;
+    }
+    60%{
+        opacity: 0;
+    }
+    95%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
