--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -24,6 +24,15 @@ $purple: #bc9fbc;
 $light_purple: #CBC3E3;
 $light_violet: #CF9FFF;
 
+.background{
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: grayscale(0.8);
+}
+
 .img_background{
     background-position: center;
     background-repeat: no-repeat;
