--- a/src/style/main.css
+++ b/src/style/main.css
@@ -337,7 +337,7 @@ body {
 }
 .final_section {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   color: #fff;
   display: flex;
@@ -362,12 +362,12 @@ body {
 }
 .final_section .final_image {
   width: 100%;
-  height: 12rem;
+  height: 10rem;
   background-position: center;
   background-size: cover;
-  border: 3px solid #fff;
+  border: 3px solid rgba(255, 255, 255, 0.6);
   margin: 0.5rem 0;
-  border-radius: 5%;
+  border-radius: 10%;
   animation-name: img_effect;
   animation-duration: 8s;
   animation-timing-function: linear;
