--- a/src/style/sass/_road.scss
+++ b/src/style/sass/_road.scss
@@ -142,7 +142,7 @@ $translateY: 5rem;
 
 .final_section{
     position: relative;
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
     color: $white;
     display: flex;
@@ -167,12 +167,12 @@ $translateY: 5rem;
     }
     .final_image{
         width: 100%;
-        height: 12rem;
+        height: 10rem;
         background-position: center;
         background-size: cover;
-        border: 3px solid $white;
+        border: 3px solid #fff9;
         margin: 0.5rem 0;
-        border-radius: 5%;
+        border-radius: 10%;
         animation-name: img_effect;
         animation-duration: 8s;
         animation-timing-function: linear;
